--- a/index.qmd
+++ b/index.qmd
@@ -107,3 +107,12 @@ A classmate was trying to figure out the probability of getting three heads when
 * [**Theoretical**] probabilities may be difficult to compute; however, [**empirical**] probabilities can help us estimate [**theoretical**] probabilities.
 * We cannot always trust a [**theoretical**] probability model as it may be based on faulty assumptions. [**Empirical**] probabilities can help us verify or refute an [**incorrect theoretical**] value.
 :::
+
+::: {.callout-note appearance="default" icon="false"}
+## Simulations
+
+Simulations are [**experiments**] used to produce [**empirical**] probabilities.
+:::
+
+## Section 5.2. Finding Theoretical Probabilities
+
